<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".TestConnectionActivity">

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/input_roomname"
        android:layout_centerHorizontal="true"
        android:text="@string/input_room_text"
        android:layout_below="@+id/connectLayout" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/connectLayout"
        android:layout_below="@+id/input_name"
        android:gravity="center"
        android:layout_centerInParent="true">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connect_button_text"
            android:id="@+id/button_connect"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_disconnect"
            android:id="@+id/button_disconnect" />
    </LinearLayout>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/input_name"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/input_name" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_roomname"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:id="@+id/joinLeaveLayout">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_button_join"
            android:id="@+id/button_join"
            android:layout_below="@+id/input_roomname"
            android:layout_toStartOf="@+id/text_view" />

        Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_button_leave"
            android:id="@+id/button_leave"
            android:layout_below="@+id/input_roomname"
            android:layout_toEndOf="@+id/text_view" />
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/text_view"
        android:layout_below="@+id/joinLeaveLayout"
        android:layout_centerHorizontal="true"
        android:background="#fffff6a2" />

</RelativeLayout>
